--- a/app/components/banner/banner.module.scss
+++ b/app/components/banner/banner.module.scss
@@ -19,7 +19,7 @@
 }
 
 .profile img {
-  width: calc($profile-size) - 4rem;
+  width: $profile-size - 4rem;
   height: auto;
   border: 6px ridge white;
 }
@@ -33,6 +33,7 @@
   padding: 1rem;
   text-shadow: 0 0 4px black;
   font-weight: bold;
+  color: white;
 }
 
 @media screen and (max-width: 640px) {
