--- a/app/components/banner/banner.module.scss
+++ b/app/components/banner/banner.module.scss
@@ -11,23 +11,19 @@
 }
 
 .profile {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex-center;
   width: 100%;
   height: 100%;
 }
 
 .profile img {
+  @include content-border;
   width: $profile-size - 4rem;
   height: auto;
-  border: 6px ridge white;
 }
 
 .description {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flex-center;
   font-size: 20px;
   line-height: 2;
   padding: 1rem;
