--- a/app/components/banner/banner.module.scss
+++ b/app/components/banner/banner.module.scss
@@ -8,18 +8,33 @@
   background: url("/images/banner.jpg");
   background-size: cover;
   background-position: 50%;
+
+  @include mobile {
+    grid-template-rows: 14rem 1fr;
+    grid-template-columns: 1fr;
+    font-size: 16px;
+  }
 }
 
 .profile {
   @include flex-center;
   width: 100%;
   height: 100%;
-}
 
-.profile img {
-  @include content-border;
-  width: $profile-size - 4rem;
-  height: auto;
+  img {
+    @include content-border;
+    border-width: 4px;
+    width: $profile-size - 4rem;
+    height: auto;
+  }
+
+  @include mobile {
+    font-size: 16px;
+
+    img {
+      width: 11rem;
+    }
+  }
 }
 
 .description {
@@ -30,24 +45,8 @@
   text-shadow: 0 0 4px black;
   font-weight: bold;
   color: white;
-}
 
-@media screen and (max-width: 640px) {
-  .banner {
-    grid-template-rows: 14rem 1fr;
-    grid-template-columns: 1fr;
-    font-size: 16px;
-  }
-
-  .profile {
-    font-size: 16px;
-  }
-
-  .profile img {
-    width: 11rem;
-  }
-
-  .description {
+  @include mobile {
     line-height: 1.5;
     padding-top: 0;
   }
