--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -2,7 +2,7 @@
 
 .outerHeader {
   @include header-border;
-  z-index: 1;
+  z-index: 3;
   position: sticky;
   top: 0;
   width: 100%;
@@ -11,60 +11,70 @@
 }
 
 .innerHeader {
-  @include menu-border;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: 4rem;
   background: $content-color;
-  padding: 0.5rem;
-  height: 4rem;
 
-  img {
-    float: left;
-    width: auto;
-    height: 100%;
-    padding: 0.25rem;
+  div {
+    @include menu-border;
+  }
+
+  @include mobile {
+    grid-template-columns: 1fr auto;
   }
 }
 
-.nav {
+.logo {
   @include flex-vertical-center;
-  float: right;
-  height: 100%;
+
+  @include mobile {
+    @include flex-center;
+  }
 }
 
-.nav a {
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
-  margin-left: $window-spacing / 2;
-  padding: 0;
-  line-height: 0;
-  color: black;
+.pageLinks {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  width: 24rem;
+  gap: 0.25rem;
+  padding: 0.25rem;
+
+  a {
+    @include flex-center;
+    @include double-border(
+      $page-links-border-color1,
+      $page-links-border-color2
+    );
+    background-color: $page-links-color;
+    color: white;
+  }
+
+  a:hover {
+    @include double-border(
+      $page-links-border-color2,
+      $page-links-border-color1
+    );
+  }
+
+  @include mobile {
+    display: none;
+  }
 }
 
-.nav a:hover {
-  color: $header-border-color2;
-  cursor: pointer;
+.externalLinks {
+  @include flex-vertical-center;
+  justify-content: right;
 }
 
-.nav img {
+.iconLink img {
+  @include flex-center;
   width: auto;
   height: 3rem;
+  margin: 0 0.5rem;
 
-  @media screen and (max-width: 640px) {
-    height: 2rem;
-  }
-}
-
-.verticalSeparator {
-  display: inline-block;
-  width: 1px;
-  height: 2.5rem;
-  background-color: $header-border-color2;
-  margin-left: $window-spacing / 2;
-}
-
-@media screen and (max-width: 1024px) {
-  .pageLinks,
-  .verticalSeparator {
-    display: none;
+  &:hover {
+    filter: brightness(75%);
   }
 }
