--- a/app/components/window/window.module.scss
+++ b/app/components/window/window.module.scss
@@ -1,22 +1,21 @@
 @import "../../constants.module.scss";
 
 .outerWindow {
-  @include window-border($large-border);
+  @include window-border;
+  position: relative;
   margin-top: $window-spacing;
   background: $window-color;
   padding: 4px;
 
-  @media screen and (max-width: 640px) {
+  @include mobile {
     margin-top: 0.5rem;
   }
 }
 
 .innerWindow {
-  @include double-border(
-    $small-border,
-    $window-border-color2,
-    $window-border-color1
-  );
+  @include double-border($window-border-color2, $window-border-color1);
+  z-index: 2;
+  position: relative;
 }
 
 .content {
@@ -26,17 +25,18 @@
 
 .titleBar {
   display: grid;
-  grid-template-columns: 2rem 1fr 2rem 2rem;
-  grid-template-rows: 2rem;
+  grid-template-columns: $title-bar-height 1fr $title-bar-height $title-bar-height;
+  grid-template-rows: $title-bar-height;
   text-align: center;
   font-size: $medium-font-size;
 }
 
 .title {
-  @include window-border($small-border);
+  @include window-border;
   @include flex-center;
   color: white;
   overflow: hidden;
+  white-space: nowrap;
 }
 
 .menu {
@@ -54,10 +54,10 @@
 
 .button {
   @include flex-center;
-  @include window-border($small-border);
+  @include window-border;
 
   div {
-    @include window-border($small-border);
+    @include window-border;
   }
 }
 
@@ -89,7 +89,23 @@
   @include flex-vertical-center;
   @include content-border;
   background: $content-color;
-  height: 2rem;
+  height: $title-bar-height;
   font-size: 20px;
   padding-left: $card-spacing;
+}
+
+.corners {
+  display: grid;
+  grid-template-columns: $corner-size 1fr $corner-size;
+  grid-template-rows: $corner-size 1fr $corner-size;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  div {
+    @include window-border;
+  }
 }
