--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -6,7 +6,7 @@
   padding: 0 $window-spacing;
   margin: $window-spacing auto;
 
-  @media screen and (max-width: 640px) {
+  @media screen and (max-width: $mobile-cutoff) {
     max-width: 100%;
     padding: 0 0.5rem;
     margin: 0.5rem auto;
