--- a/app/components/card/card.module.scss
+++ b/app/components/card/card.module.scss
@@ -19,13 +19,13 @@
 }
 
 .title {
-  font-size: $medium-font-size;
+  font-size: $large-font-size;
   font-weight: bold;
 }
 
 .description {
   position: relative;
-  font-size: $regular-font-size;
+  font-size: $medium-font-size;
 }
 
 .image {
