--- a/app/components/footer/footer.module.scss
+++ b/app/components/footer/footer.module.scss
@@ -2,7 +2,7 @@
 
 .footer {
   width: 100%;
-  font-size: $medium-font-size;
+  font-size: $large-font-size;
   line-height: 1.5;
   text-align: center;
   padding-top: $window-spacing * 2;
