--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -6,7 +6,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  padding: $large-border;
+  padding: $border-size * 2;
   background: $header-color;
 }
 
