--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -9,6 +9,6 @@
   @media screen and (max-width: $mobile-cutoff) {
     max-width: 100%;
     padding: 0 0.5rem;
-    margin: 0.5rem auto;
+    margin: 0.5rem auto $window-spacing auto;
   }
 }
