--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -27,6 +27,7 @@
 
 .logo {
   @include flex-vertical-center;
+  padding-left: 0.25rem;
 
   @include mobile {
     @include flex-center;
@@ -40,6 +41,7 @@
   width: 24rem;
   gap: 0.25rem;
   padding: 0.25rem;
+  background: $menu-color;
 
   a {
     @include flex-center;
@@ -66,12 +68,13 @@
 .externalLinks {
   @include flex-vertical-center;
   justify-content: right;
+  padding-right: 0.25rem;
 }
 
 .iconLink img {
   @include flex-center;
   width: auto;
-  height: 3rem;
+  height: 2.5rem;
   margin: 0 0.5rem;
 
   &:hover {
