--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -13,7 +13,7 @@
 .innerHeader {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: 4rem;
+  grid-template-rows: 4.5rem;
   background: $content-color;
 
   div {
@@ -27,7 +27,7 @@
 
 .logo {
   @include flex-vertical-center;
-  padding-left: 0.25rem;
+  padding: 0 0.25rem;
 
   @include mobile {
     @include flex-center;
@@ -68,13 +68,13 @@
 .externalLinks {
   @include flex-vertical-center;
   justify-content: right;
-  padding-right: 0.25rem;
+  padding: 0 0.25rem;
 }
 
 .iconLink img {
   @include flex-center;
   width: auto;
-  height: 2.5rem;
+  height: 4.5rem - 1.5rem;
   margin: 0 0.5rem;
 
   &:hover {
