--- a/app/components/card/card.module.scss
+++ b/app/components/card/card.module.scss
@@ -41,7 +41,7 @@
 
 .linkIcon {
   position: absolute;
-  width: 1.2rem;
+  width: $card-link-icon-size;
   height: auto;
   right: 0;
   bottom: 0;
