--- a/app/components/footer/footer.module.scss
+++ b/app/components/footer/footer.module.scss
@@ -1,12 +1,10 @@
 @import "../../constants.module.scss";
 
 .footer {
-  width: 100%;
+  padding: $window-spacing * 2 0;
   font-size: $large-font-size;
   line-height: 1.5;
   text-align: center;
-  padding-top: $window-spacing * 2;
-  padding-bottom: $window-spacing;
   color: white;
 
   a {
