--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -12,35 +12,35 @@
 
 .innerHeader {
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  grid-template-rows: 4.5rem;
+  grid-template-columns: 1fr minmax(auto, $page-links-width) 1fr;
+  grid-template-rows: $header-height;
   background: $content-color;
-
-  div {
-    @include menu-border;
-  }
 
   @include mobile {
     grid-template-columns: 1fr auto;
   }
 }
 
-.logo {
+.logo,
+.externalLinks {
   @include flex-vertical-center;
-  padding: 0 0.25rem;
+  @include menu-border;
+  padding: $header-padding;
+}
 
+.logo {
   @include mobile {
     @include flex-center;
   }
 }
 
 .pageLinks {
+  @include menu-border;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  width: 24rem;
-  gap: 0.25rem;
-  padding: 0.25rem;
+  gap: $page-links-spacing;
+  padding: $page-links-spacing;
   background: $menu-color;
 
   a {
@@ -66,18 +66,23 @@
 }
 
 .externalLinks {
-  @include flex-vertical-center;
   justify-content: right;
-  padding: 0 0.25rem;
+
+  .iconLink {
+    margin-left: $header-icon-spacing;
+
+    &:first-child {
+      margin-left: 0;
+    }
+  }
 }
 
 .iconLink img {
   @include flex-center;
   width: auto;
-  height: 4.5rem - 1.5rem;
-  margin: 0 0.5rem;
+  height: $header-height - $header-padding * 2;
 
   &:hover {
-    outline: $border-size dotted black;
+    outline: $header-icon-border;
   }
 }
