--- a/app/components/section/section.module.scss
+++ b/app/components/section/section.module.scss
@@ -1,8 +1,8 @@
 @import "../../constants.module.scss";
 
 .section {
-  margin-top: -1 * ($window-spacing + 3.5rem);
-  padding-top: $window-spacing + 3.5rem;
+  margin-top: calc(-1 * $page-links-anchor-offset);
+  padding-top: $page-links-anchor-offset;
 }
 
 .titleBar {
