--- a/app/constants.module.scss
+++ b/app/constants.module.scss
@@ -71,6 +71,7 @@ $window-spacing: 1.5rem;
 $window-spacing-mobile: 0.75rem;
 $window-icon-large-dim: 1.2rem;
 $window-icon-small-dim: 0.4rem;
+$outer-window-padding: $border-size * 2 + 0.5px;
 $title-bar-height: 2rem;
 $menu-bar-height: 2.5rem;
 $card-spacing: 0.5rem;
