--- a/app/constants.module.scss
+++ b/app/constants.module.scss
@@ -1,59 +1,4 @@
-/* cde colors */
-// $header-color: #999999;
-// $header-border-color1: #d1d1d2;
-// $header-border-color2: #4e4e4e;
-// $window-color: #eda870;
-// $window-border-color1: #f7d9c0;
-// $window-border-color2: #7d593b;
-// $menu-color: #4992a7;
-// $menu-font-color: white;
-// $menu-border-color1: #adced7;
-// $menu-border-color2: #244953;
-// $content-color: #c6b2a8;
-// $content-border-color1: #e7deda;
-// $content-border-color2: #6a605a;
-// $page-links-color: #8998aa;
-// $page-links-border-color1: #cad1d9;
-// $page-links-border-color2: #464d56;
-// $background-color: #4992a7;
-
-/* solaris colors */
-// $header-color: #adb5c6;
-// $header-border-color1: #dedee7;
-// $header-border-color2: #5c6373;
-// $window-color: #b54a7b;
-// $window-border-color1: #deadc6;
-// $window-border-color2: #522139;
-// $menu-color: #adb5c6;
-// $menu-font-color: black;
-// $menu-border-color1: #dedee7;
-// $menu-border-color2: #5c6373;
-// $content-color: #adb5c6;
-// $content-border-color1: #dedee7;
-// $content-border-color2: #5c6373;
-// $page-links-color: #63639c;
-// $page-links-border-color1: #b5b5d6;
-// $page-links-border-color2: #29294a;
-// $background-color: #524a8c;
-
-/* custom */
-$header-color: #91a9bc;
-$header-border-color1: lighten($header-color, 20%);
-$header-border-color2: darken($header-color, 20%);
-$window-color: #2c6f8f;
-$window-border-color1: lighten($window-color, 30%);
-$window-border-color2: darken($window-color, 20%);
-$menu-color: #91a9bc;
-$menu-font-color: black;
-$menu-border-color1: lighten($menu-color, 20%);
-$menu-border-color2: darken($menu-color, 20%);
-$content-color: #91a9bc;
-$content-border-color1: lighten($content-color, 20%);
-$content-border-color2: darken($content-color, 20%);
-$page-links-color: #2c6f8f;
-$page-links-border-color1: lighten($page-links-color, 30%);
-$page-links-border-color2: darken($page-links-color, 20%);
-$background-color: #193d50;
+@import "themes/primary.scss";
 
 /* font sizes */
 $small-font-size: 12px;
