use css instead of ts for item arraignment

--- a/src/lib/scss/mixins.scss
+++ b/src/lib/scss/mixins.scss
@@ -7,6 +7,12 @@
 	}
 }
 
+@mixin tablet {
+	@media screen and (max-width: 1024px) {
+		@content;
+	}
+}
+
 @mixin flex-center {
 	@include flex-vertical-center;
 	justify-content: center;
