--- a/src/lib/scss/mixins.scss
+++ b/src/lib/scss/mixins.scss
@@ -2,19 +2,19 @@
 @use './variables.scss' as v;
 
 @mixin mobile {
-	@media screen and (max-width: 640px) {
+	@media screen and (max-width: v.$mobile-cutoff) {
 		@content;
 	}
 }
 
 @mixin tablet {
-	@media screen and (max-width: 1024px) {
+	@media screen and (min-width: v.$mobile-cutoff) and (max-width: v.$tablet-cutoff) {
 		@content;
 	}
 }
 
 @mixin desktop {
-	@media screen and (min-width: 1024px) {
+	@media screen and (min-width: v.$tablet-cutoff) {
 		@content;
 	}
 }
