--- a/src/lib/scss/variables.scss
+++ b/src/lib/scss/variables.scss
@@ -7,3 +7,5 @@ $window-spacing-mobile: 0.75rem;
 $card-spacing: 0.5rem;
 $header-height: 4.5rem;
 $header-padding: 0.75rem;
+$mobile-cutoff: 640px;
+$tablet-cutoff: 1024px;
